JAHIA-4698: Admin - About Jahia wrong version of Jahia displayed JAHIA-4701: Pro license - ESI connector still there http://jira.jahia.org/browse/JAHIA-4698 http://jira.jahia.org/browse/JAHIA-4701 http://10.8.37.247/fisheye/cru/AND-Wroom-63 Resolution: make date limits checks more consistent (gather all of them at one place) and commit new license file without ESI, Manage Homepages and ClipBuilder features.
git-svn-id: svn://localhost/jahia/branches/JAHIA-6-0-BRANCH@1703 69c369ed-ed09-0410-a4a1-e19a46c23626